# image_preprocessing

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: add_reviewers.yml  pypi_deploy.yml
basic_image_preprocessing/: __init__.py
basic_image_preprocessing/examples/: Basic Image Processing - Conventional Methods.ipynb  Basic Image Processing - Edge Detection.ipynb  Basic Image Processing - Frequency Noise Filtering.ipynb  Basic Image Processing - Spatial Noise Filtering.ipynb  Basic Image Processing - Traditional Methods.ipynb
basic_image_preprocessing/exception/: custom_exception.py
basic_image_preprocessing/image_enhancement/conventional/: conventional.py
basic_image_preprocessing/image_enhancement/edge_detection/: edge_detection.py
basic_image_preprocessing/image_enhancement/noise_filtering/frequency_filtering/: frequency_filtering.py
basic_image_preprocessing/image_enhancement/noise_filtering/spatial_filtering/: spatial_filtering.py
basic_image_preprocessing/image_enhancement/traditional/: traditional.py
basic_image_preprocessing/noise_filtering/spatial/: spatial.py
basic_image_preprocessing/noise_filtering/spatial_filtering/: spatial_filtering.py
basic_image_preprocessing/utility/: utlity.py
