[tool.poetry]
name = "basic_image_preprocessing"
version = "1.0.2"
description = "A complete package to perform a list of simple manual and package based image preprocessing techniques"
authors = ["M Thivagar", "Saivijaay"]
readme = "README.md"
homepage = "https://github.com/thivagar-manickam/image_preprocessing"
repository = "https://github.com/thivagar-manickam/image_preprocessing"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["Image preprocessing", "Basic Image preprocessing", "Linear methods", "Algorithm based preprocessing",
            "Noise filtering", "Frequency based transformation", "Edge detection"]

[tool.poetry.dependencies]
python = ">=3.8"
opencv-python = ">=4.5.1.48"
numpy = ">=1.21.4"
pandas = ">=1.3.5"
matplotlib = ">=3.5.0"
image_frequency_analysis = "0.2.7"
PyWavelets="1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"